# spinnaker

spinnaker_camera_driver/: CMakeLists.txt  package.xml
spinnaker_camera_driver/include/spinnaker_camera_driver/: camera_list_wrapper.hpp  camera_settings.hpp  camera_wrapper.hpp  system_wrapper.hpp  visibility_control.hpp
spinnaker_camera_driver/src/: camera_list_wrapper.cpp  camera_settings.cpp  camera_wrapper.cpp  system_wrapper.cpp
spinnaker_camera_node/: CMakeLists.txt  package.xml  spinnaker_camera_node.xml
spinnaker_camera_node/cmake/: FindSPINNAKER.cmake
spinnaker_camera_node/include/spinnaker_camera_node/: nodelet.hpp  rcl_node.hpp
spinnaker_camera_node/launch/: spinnaker_camera_nodelet.launch
spinnaker_camera_node/param/: bfs_ros1.yaml  bfs_ros2.yaml  camera_info.yaml
spinnaker_camera_node/src/: node.cpp  nodelet.cpp  rcl_node.cpp
spinnaker_camera_nodes/: CMakeLists.txt  package.xml
spinnaker_camera_nodes/include/spinnaker_camera_nodes/: spinnaker_camera_node.hpp
spinnaker_camera_nodes/src/: spinnaker_camera_node.cpp
