<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>spinnaker_camera_driver</name>
    <version>0.0.1</version>
    <description>A wrapper of Spinnaker camera SDK.</description>
    <maintainer email="opensource@apex.ai">Igor Bogoslavskyi</maintainer>
    <license>Apache Licence 2.0</license>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>

    <build_depend>ros_environment</build_depend>

    <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
    <test_depend condition="$ROS_VERSION == 2"> ament_lint_common</test_depend>
    <test_depend condition="$ROS_VERSION == 2">ament_cmake_gmock</test_depend>

    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>
</package>
