<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>spinnaker_camera_node</name>
    <version>0.0.1</version>
    <description>A node for the Spinnaker camera SDK wrapper.</description>
    <maintainer email="opensource@apex.ai">Igor Bogoslavskyi</maintainer>
    <license>Apache Licence 2.0</license>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>

    <build_depend>ros_environment</build_depend>

    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 1">nodelet</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>compressed_image_transport</depend>
    <depend>camera_info_manager</depend>
    <depend>spinnaker_camera_driver</depend>

    <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
    <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
    <test_depend condition="$ROS_VERSION == 2">ros_testing</test_depend>

    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
        <nodelet plugin="${prefix}/spinnaker_camera_node.xml" condition="$ROS_VERSION == 1"/>
    </export>
</package>
